--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-navigation/material-top-tabs": "^5.1.2",
+    "@react-navigation/native": "^5.0.10",
     "babel-plugin-module-resolver": "^3.2.0",
     "eslint-plugin-import": "^2.18.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-elements": "^1.2.7",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native-gesture-handler": "^1.6.0",
+    "react-native-reanimated": "^1.7.0",
+    "react-native-tab-view": "^2.13.0",
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^4.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
