--- a/package.json
+++ b/package.json
@@ -10,26 +10,29 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-navigation/material-top-tabs": "^5.1.2",
+    "@react-native-community/masked-view": "^0.1.7",
+    "@react-navigation/material-top-tabs": "^5.1.7",
     "@react-navigation/native": "^5.0.10",
     "babel-plugin-module-resolver": "^3.2.0",
-    "eslint-plugin-import": "^2.18.2",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-elements": "^1.2.7",
-    "react-native-gesture-handler": "^1.6.0",
-    "react-native-reanimated": "^1.7.0",
+    "react-native-gesture-handler": "^1.6.1",
+    "react-native-reanimated": "^1.7.1",
+    "react-native-safe-area-context": "^0.7.3",
+    "react-native-screens": "^2.4.0",
     "react-native-tab-view": "^2.13.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
-    "@babel/runtime": "^7.6.2",
+    "@babel/runtime": "^7.9.2",
     "@react-native-community/eslint-config": "^0.0.5",
     "babel-jest": "^24.9.0",
     "eslint": "^6.5.1",
-    "eslint-import-resolver-babel-module": "^5.1.0",
+    "eslint-import-resolver-babel-module": "^5.1.2",
+    "eslint-plugin-import": "^2.20.2",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.0",
     "react-test-renderer": "16.9.0"
